# structorex

./: .flake8  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_DE.md  CONTRIBUTING_RU.md  LICENSE  LICENSE_DE  LICENSE_RU  MANIFEST.in  README.md  README_DE.md  README_RU.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
USER_GUIDE/: index.html
USER_GUIDE_DE/: index.html
USER_GUIDE_RU/: index.html
api/: index.html
cli/: index.html
contributing/: index.html
de/: index.html
de/USER_GUIDE/: index.html
de/USER_GUIDE_DE/: index.html
de/USER_GUIDE_RU/: index.html
de/api/: index.html
de/cli/: index.html
de/contributing/: index.html
de/installation/: index.html
de/usage/: index.html
docs/: USER_GUIDE.md  USER_GUIDE_DE.md  USER_GUIDE_RU.md
docs/de/: api.md  cli.md  contributing.md  index.md  installation.md  usage.md
docs/en/: api.md  cli.md  contributing.md  index.md  installation.md  usage.md
docs/ru/: api.md  cli.md  contributing.md  index.md  installation.md  usage.md
installation/: index.html
ru/: index.html
ru/USER_GUIDE/: index.html
ru/USER_GUIDE_DE/: index.html
ru/USER_GUIDE_RU/: index.html
ru/api/: index.html
ru/cli/: index.html
ru/contributing/: index.html
ru/installation/: index.html
ru/usage/: index.html
search/: search_index.json
src/structorex/: cli.py  config.py  utils.py  writers.py
src/structorex/core/: builder.py  components.py  filter.py  visitor.py
tests/: test_builder.py  test_config.py  test_filter.py  test_visitor.py
usage/: index.html
